Fix: getFirst() 수정